@@ -1,6 +1,7 @@
 Version 2.6.2
 * Fixes by Olaf Wuchnitz: print format for writing strings to FITS and argument order in memcpy
 * Sniffer: keep one more amplitude digit
+* Sniffer: apd and apc files: keep 2 more time digits
 * Some compiler warning fixes
 * Some cppcheck results from Martin Ettl
 
